--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,9 +1,35 @@
-<div class="container-fluid custom-bg">
-  <div class="row">
-    <div class="col-md-6">
+<div class="container-fluid landing-bg "> <!---entry image-->
+<div class="row">
+    <div class="col-md-6 mx-auto">
+      <div class="landing-txt py-3">
       <h1>Queens Gems </h1>
-      <p>Elegant celestianl something .</p>
+      <p>Elegant celestianl something.</p>
+      <button type="button" class="btn btn-outline-dark">Shop Now</button>  
+      </div>
+  </div>
+    </div> <!--row div-->
+
+</div>
+
+<div class="container">
+  <div class="cards">
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
   </div>
-</div>
-  <h1 style="font-size:50px">Queens Gems</h1>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    </div>
+  </div>
+</div><!--cards-->
+ </div><!--container  -->
