--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -1,18 +1,33 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
-    background-color: #ffe9f2 ; box-sizing: border-box;
-  }
+    background-color: #f4c7dab2 ;
+  } */
 
-  .custom-bg{
+  .landing-bg{
     background-image: url("../../../assets/images/GemsQueen.jpg");
     background-size: cover;
-    background-position: center center;
+    background-position: center ;
     background-repeat: no-repeat;
     height: 80vh; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff; 
-    
+    max-width:100% ;
   }
+  
+  .landing-txt{
+    margin-top:10rem;
+    color: #560035; 
+    background-color: rgba(255, 255, 255, 0.139);
+    max-width:100% ;
+   border:rgb(182, 141, 141) solid 1px 
+  
+  }
+
+  .cards{
+    
+    margin-top:2em ;
+    display:flex;
+    flex-direction:row;
+    justify-content: space-evenly; 
+    align-items:stretch;
+    
+}
